--- a/FWMeituApp/FWMeituApp/Info.plist
+++ b/FWMeituApp/FWMeituApp/Info.plist
@@ -2,8 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>AppIcon29x29.png</string>
+		<string>AppIcon29x29@2x.png</string>
+		<string>AppIcon29x29@3x.png</string>
+		<string>AppIcon40x40@2x.png</string>
+		<string>AppIcon40x40@2x.png</string>
+		<string>AppIcon57x57.png</string>
+		<string>AppIcon57x57@2x.png</string>
+		<string>AppIcon60x60@2x.png</string>
+		<string>AppIcon60x60@3x.png</string>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -43,5 +53,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleDisplayName</key>
+	<string>美图</string>
 </dict>
 </plist>
