--- a/FWMeituApp/FWMeituApp/effectViewInfo.plist
+++ b/FWMeituApp/FWMeituApp/effectViewInfo.plist
@@ -2,6 +2,88 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ColorValue</key>
+	<dict>
+		<key>normalImages</key>
+		<array>
+			<string>icon_brightness_a@2x.png</string>
+			<string>icon_contrast_a@2x.png</string>
+			<string>icon_colourTemperature_a@2x.png</string>
+			<string>icon_saturation_a@2x.png</string>
+			<string>icon_hightLight_a@2x.png</string>
+			<string>icon_shade_a@2x.png</string>
+			<string>icon_fillinlight_a@2x.png</string>
+		</array>
+		<key>HighlightedImages</key>
+		<array>
+			<string>icon_brightness_b@2x.png</string>
+			<string>icon_contrast_b@2x.png</string>
+			<string>icon_colourTemperature_b@2x.png</string>
+			<string>icon_saturation_b@2x.png</string>
+			<string>icon_hightLight_b@2x.png</string>
+			<string>icon_shade_b@2x.png</string>
+			<string>icon_fillinlight_b@2x.png</string>
+		</array>
+		<key>Texts</key>
+		<array>
+			<string>亮度</string>
+			<string>对比度</string>
+			<string>色温</string>
+			<string>饱和度</string>
+			<string>高光</string>
+			<string>暗部</string>
+			<string>智能补光</string>
+		</array>
+	</dict>
+	<key>MagicBrush</key>
+	<dict>
+		<key>normalImages</key>
+		<array>
+			<string>magic_brush_09@2x.png</string>
+			<string>magic_brush_13@2x.png</string>
+			<string>magic_brush_16@2x.png</string>
+			<string>magic_brush_17@2x.png</string>
+			<string>magic_brush_12@2x.png</string>
+			<string>magic_brush_14@2x.png</string>
+			<string>magic_brush_15@2x.png</string>
+			<string>magic_brush_11@2x.png</string>
+			<string>magic_brush_01@2x.png</string>
+			<string>magic_brush_02@2x.png</string>
+			<string>magic_brush_03@2x.png</string>
+			<string>magic_brush_04@2x.png</string>
+			<string>magic_brush_05@2x.png</string>
+			<string>magic_brush_06@2x.png</string>
+			<string>magic_brush_07@2x.png</string>
+			<string>magic_brush_08@2x.png</string>
+			<string>magic_brush_10@2x.png</string>
+			<string>magic_brush_eraser@2x.png</string>
+		</array>
+		<key>HighlightedImages</key>
+		<array>
+			<string></string>
+		</array>
+		<key>Texts</key>
+		<array>
+			<string>烟花棒</string>
+			<string>炫光</string>
+			<string>丝带</string>
+			<string>彩虹</string>
+			<string>四叶草</string>
+			<string>紫光</string>
+			<string>绿宝石</string>
+			<string>花瓣</string>
+			<string>七彩光圈</string>
+			<string>爱心</string>
+			<string>光晕</string>
+			<string>飘雪</string>
+			<string>心动</string>
+			<string>小星星</string>
+			<string>梦幻</string>
+			<string>萤火虫</string>
+			<string>荧光笔</string>
+			<string>橡皮擦</string>
+		</array>
+	</dict>
 	<key>AutoBeauty</key>
 	<dict>
 		<key>Texts</key>
